test/regtest/cases/errors/expect_before.kum
| disable_jsexec
алг нач
   ф(10)
кон

алг ф(цел й)
   дано й<10
нач
   вывод "ok"
кон